--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
   },
   "devDependencies": {
     "eslint": "^7.15.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "4.0.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "supertest": "^6.0.1"
